argocd/nimbus-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-portal
  name: web-portal
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: web-portal
  type: ClusterIP
